--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
         "AuthrSource": "",
         "user": "",
         "password": "",
-        "uri" : "mongodb://localhost:27017"
+        "uri" : "mongodb://localhost:27017",
+        "dbCollections" : ["TestCollection","People"]
     }
 }
